dynamix/force-app/main/default/objects/Interest_Charged__c/Interest_Charged__c.object-meta.xml
<CustomObject>
    <label>Interest Charged</label>
    <nameField>
        <displayFormat>Int-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Charged</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>