dynamix/force-app/main/default/objects/Interest_Charged__c/fields/GST_on_Interest__c.field-meta.xml
<CustomField>
    <fullName>GST_on_Interest__c</fullName>
    <label>18% Interest on total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>