dynamix/force-app/main/default/objects/Interest_Charged__c/fields/Interest_Amount_GST__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_GST__c</fullName>
    <label>Interest Amount GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>