dynamix/force-app/main/default/objects/Interest_Charged__c/fields/Interest_on_total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_total_Amount__c</fullName>
    <formula>((To_Date__c-	From_Date__c)*(Interest_Amount__c + Interest_Amount_GST__c )*0.18)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18% Interest on total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>