dynamix/force-app/main/default/objects/Interest_Charged__c/fields/Intrest_calucation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Intrest_calucation_Amount__c</fullName>
    <label>Interest Calucation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>