dynamix/force-app/main/default/objects/Interest_Charged__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <referenceTo>Payment_Milestones__c</referenceTo>
    <relationshipLabel>Interest Charged</relationshipLabel>
    <relationshipName>Interest_Charged</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>